--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.arastigames.unityextensions-methods": "https://github.com/NateArasti/UnityExtensions.git#UnityExtensions-Methods",
     "com.arastigames.unityextensions-tools": "https://github.com/NateArasti/UnityExtensions.git#UnityExtensions-Tools",
     "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git#upm",
+    "com.quickeye.utility": "https://github.com/ErnSur/QuickEye-Utility.git#upm",
     "com.unity.adaptiveperformance.samsung.android": "4.0.1",
     "com.unity.cinemachine": "2.8.9",
     "com.unity.collab-proxy": "1.15.17",
