--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
-    "com.arastigames.unityextensions-installer": "https://github.com/NateArasti/UnityExtensions.git#UnityExtensions-PackagesInstaller",
-    "com.arastigames.unityextensions-methods": "https://github.com/NateArasti/UnityExtensions.git#UnityExtensions-Methods",
-    "com.arastigames.unityextensions-tools": "https://github.com/NateArasti/UnityExtensions.git#UnityExtensions-Tools",
+    "com.arastigames.unityextensions": "https://github.com/NateArasti/UnityExtensions.git#UnityExtensions",
+    "com.arastigames.unityextensions-installer": "https://github.com/NateArasti/UnityExtensions.git#UnityExtensions-Installer",
     "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git#upm",
     "com.gabrielbigardi.spriteanimator": "https://github.com/GabrielBigardi/Unity-2D-Sprite-Animator.git",
     "com.quickeye.utility": "https://github.com/ErnSur/QuickEye-Utility.git#upm",
